src/objects/RD_Staging_Customer_Config__c.object
<CustomObject>
    <description>Staging record for Informatica Load from Mothership</description>
    <fields>
        <fullName>DSI__c</fullName>
        <description>dsi_id__c on the dsi object</description>
        <label>DSI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnvironmentId__c</fullName>
        <label>Environment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyVersion__c</fullName>
        <label>Key Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseActivationStatus__c</fullName>
        <label>License Activation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Id__c</fullName>
        <description>source for machine id</description>
        <label>Machine Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Key__c</fullName>
        <description>method to find EC_Question</description>
        <label>Question Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>Date loaded into Mothership</description>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Id__c</fullName>
        <label>Response Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StagingId__c</fullName>
        <externalId>true</externalId>
        <label>Staging Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>what type of EC_Response should be generated</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Setting</fullName>
                </value>
                <value>
                    <fullName>License D</fullName>
                </value>
                <value>
                    <fullName>License U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>actual response value</description>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>errorMessage__c</fullName>
        <label>errorMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hasError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasError</label>
        <type>Checkbox</type>
    </fields>
    <label>RD Staging Customer Config</label>
    <nameField>
        <label>RD Staging Customer Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Staging Customer Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>